tested create view/route and debugged to fix membership not being recorded properly

--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -5,8 +5,7 @@
   <p>Membership status:
     <% if (member.premium() == true) %>
     Premium
-    <% end %>
-    <% if (member.premium() == false) %>
+    <% elsif (member.premium() == false) %>
     Standard
     <% end %>
   </p>
