--- a/views/members/new.erb
+++ b/views/members/new.erb
@@ -2,10 +2,10 @@
   <label for="name">Full Name:</label>
   <input type="text" name="name">
 
-  <label for="membership">Membership:</label>
-  <select name="membership">
-    <option value=<%true%>><%="Premium"%></option>
-    <option value=<%false%>><%="Standard"%></option>
+  <label for="premium">Membership status:</label>
+  <select name="premium">
+    <option value=<%=true%>><%="Premium"%></option>
+    <option value=<%=false%>><%="Standard"%></option>
   </select>
   <input type="submit" value="Add member">
 </form>
