updated member index to include lesson count

--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -9,6 +9,7 @@
     Standard
     <% end %>
   </p>
+  <p>Lessons: <%=member.lessons.count()%></p>
   <hr/>
   <div class="buttons">
     <form action="/members/<%=member.id()%>" method="get">
