updated member update view - submit button now says update member instead of add member

--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -12,5 +12,5 @@
     <option selected value=<%=false%>><%="Standard"%></option>
     <% end %>
   </select>
-  <input type="submit" value="Add member">
+  <input type="submit" value="Update member">
 </form>
