--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,8 +10,14 @@
 <body>
   <nav class="topnav">
   <a class="home" href="/">Home</a>
+  <% unless (@show_lessons == "show_lessons") %>
+    <a href="/lessons">View lessons</a>
+  <% end %>
+  <% if (@show_lessons == "show_lessons") %>
+    <a class="create-new" href="/lessons/new">Add new lesson </a>
+  <% end %>
   <% unless (@show_members == "show_members") %>
-    <a href="/members">View all members</a>
+    <a href="/members">View members</a>
   <% end %>
   <% if (@show_members == "show_members") %>
     <a class="create-new" href="/members/new">Add new member </a>
