added route and view for adding new lesson to a member

--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -17,6 +17,7 @@
 </ul>
 <hr/>
 
+<!-- <form action=""></form> -->
 <form action="/members/<%=@member.id()%>/edit" method="get">
   <input type="submit" value="Edit this member">
 </form>
