--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -17,7 +17,16 @@
 </ul>
 <hr/>
 
-<!-- <form action=""></form> -->
+<form action="/members/<%=@member.id()%>/" method="post">
+  <select name="lesson_id">
+    <option value="" disabled selected>Choose new lesson</option>
+    <% @lessons.each() { |lesson| unless (@member.premium == false && lesson.peak == true)%>
+    <option value="<%=lesson.id%>"><%=lesson.course%></option>
+  <% end } %>
+  </select>
+  <input type="submit" value="Add new lesson">
+</form>
+
 <form action="/members/<%=@member.id()%>/edit" method="get">
   <input type="submit" value="Edit this member">
 </form>
