--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -17,10 +17,11 @@
 </ul>
 <hr/>
 
-<form action="/members/<%=@member.id()%>/" method="post">
+<form action="/members/<%=@member.id()%>/add" method="post">
+  <input type="hidden" name="member_id" value="<%=@member.id%>">
   <select name="lesson_id">
     <option value="" disabled selected>Choose new lesson</option>
-    <% @lessons.each() { |lesson| unless (@member.premium == false && lesson.peak == true)%>
+    <% @lessons.each() { |lesson| unless ((@member.premium == false && lesson.peak == true) || (@member.lesson_ids.include?(lesson.id)))%>
     <option value="<%=lesson.id%>"><%=lesson.course%></option>
   <% end } %>
   </select>
