--- a/views/lessons/add.erb
+++ b/views/lessons/add.erb
@@ -18,7 +18,7 @@
 </ul>
 <hr/>
 
-<form action="/lessons/<%=@lesson.id()%>/add" method="post">
+<form action="/lessons/<%=@lesson.id()%>/add" method="post" <% if (@lesson.members.count >= @lesson.capacity ) %> hidden <%end%>>
   <input type="hidden" name="lesson_id" value="<%=@lesson.id%>">
   <select name="member_id" required>
     <option value="" disabled selected>Choose new member</option>
@@ -29,11 +29,24 @@
   <input type="submit" value="Add new member">
 </form>
 
+<form action="/lessons/<%=@lesson.id%>/remove" method="post" <% if (@lesson.members == []) %> hidden <%end%>>
+  <input type="hidden" name="lesson_id" value="<%=@lesson.id%>">
+  <select name="member_id" required>
+    <option value="" disabled selected>Choose member to remove</option>
+    <% @members.each() { |member| if (@lesson.member_ids.include?(member.id))%>
+      <option value="<%=member.id%>"><%=member.name%></option>
+    <% end } %>
+  </select>
+  <input type="submit" value="Remove a member">
+</form>
+
 <form action="/lessons/<%=@lesson.id()%>/edit" method="get">
   <input type="submit" value="Edit this lesson">
 </form>
 <form action="/lessons/<%=@lesson.id()%>/delete" method="post">
   <input type="submit" value="Delete this lesson">
 </form>
+
+<p><a href="/lessons">Return</a> to directory.</p>
 
 <h3><%=@member.name%> now attending <%=@lesson.course%>.</h3>
