updated delete routes to redirect to index in case of double submission. moved all gym routes to /gym/

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,16 +11,16 @@
   <nav class="topnav">
   <a class="home" href="/">Home</a>
   <% unless (@show_lessons == "show_lessons") %>
-    <a href="/lessons">View lessons</a>
+    <a href="/gym/lessons">View lessons</a>
   <% end %>
   <% if (@show_lessons == "show_lessons") %>
-    <a class="create-new" href="/lessons/new">Add lesson </a>
+    <a class="create-new" href="/gym/lessons/new">Add lesson </a>
   <% end %>
   <% unless (@show_members == "show_members") %>
-    <a href="/members">View members</a>
+    <a href="/gym/members">View members</a>
   <% end %>
   <% if (@show_members == "show_members") %>
-    <a class="create-new" href="/members/new">Add member </a>
+    <a class="create-new" href="/gym/members/new">Add member </a>
   <% end %>
   </nav>
   <%= yield %>
