--- a/views/members/index.erb
+++ b/views/members/index.erb
@@ -12,13 +12,13 @@
   <p>Lessons: <%=member.lessons.count()%></p>
   <hr/>
   <div class="buttons">
-    <form action="/members/<%=member.id()%>" method="get">
+    <form action="/gym/members/<%=member.id()%>" method="get">
       <input class="button" type="submit" value="View this member">
     </form>
-    <form action="/members/<%=member.id()%>/edit" method="get">
+    <form action="/gym/members/<%=member.id()%>/edit" method="get">
       <input class="button edit" type="submit" value="Edit this member">
     </form>
-    <form action="/members/<%=member.id()%>/delete" method="post">
+    <form action="/gym/members/<%=member.id()%>/delete" method="post">
       <input class="button delete" type="submit" value="Delete this member">
     </form>
   </div>
