--- a/views/lessons/edit.erb
+++ b/views/lessons/edit.erb
@@ -1,4 +1,4 @@
-<form action="/lessons/<%=@lesson.id()%>" method="post">
+<form action="/gym/lessons/<%=@lesson.id()%>" method="post">
   <label for="course">Course:</label>
   <input type="text" name="course" value="<%=@lesson.course%>">
 
