--- a/views/lessons/index.erb
+++ b/views/lessons/index.erb
@@ -12,13 +12,13 @@
   <p>Capacity: <%=lesson.members.count()%>/<%=lesson.capacity%></p>
   <hr/>
   <div class="buttons">
-    <form action="/lessons/<%=lesson.id()%>" method="get">
+    <form action="/gym/lessons/<%=lesson.id()%>" method="get">
       <input class="button" type="submit" value="View this lesson">
     </form>
-    <form action="/lessons/<%=lesson.id()%>/edit" method="get">
+    <form action="/gym/lessons/<%=lesson.id()%>/edit" method="get">
       <input class="button edit" type="submit" value="Edit this lesson">
     </form>
-    <form action="/lessons/<%=lesson.id()%>/delete" method="post">
+    <form action="/gym/lessons/<%=lesson.id()%>/delete" method="post">
       <input class="button delete" type="submit" value="Delete this lesson">
     </form>
   </div>
