--- a/views/lessons/new.erb
+++ b/views/lessons/new.erb
@@ -1,4 +1,4 @@
-<form action="/lessons" method="post">
+<form action="/gym/lessons" method="post">
   <label for="course">Course:</label>
   <input type="text" name="course">
 
