--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -1,4 +1,4 @@
-<form action="/members/<%=@member.id()%>" method="post">
+<form action="/gym/members/<%=@member.id()%>" method="post">
   <label for="name">Full Name:</label>
   <input type="text" name="name" value="<%=@member.name%>">
 
