--- a/views/members/new.erb
+++ b/views/members/new.erb
@@ -1,4 +1,4 @@
-<form action="/members" method="post">
+<form action="/gym/members" method="post">
   <label for="name">Full Name:</label>
   <input type="text" name="name">
 
