--- a/views/home.erb
+++ b/views/home.erb
@@ -1,3 +1,3 @@
 <div id='home-container'>
-  <h1 id='title'>Average Joe's Gym Intranet</h1>
+  <h1 id='title'>Average Joe's Gym and Wellbeing Centre Intranet</h1>
 </div>
