--- a/views/patients/index.erb
+++ b/views/patients/index.erb
@@ -9,8 +9,8 @@
     No
     <% end %>
   </p>
-  <p>Member ID: <%= patient.member_id %></p> <% if patient.membership %>
-  <p>Conditions: <%=patient.conditions.count()%></p>
+  <% if patient.membership %><p>Member ID: <%= patient.member_id %></p> <% end %>
+  <p>Current conditions: <%=patient.current_conditions.count()%></p>
   <hr/>
   <div class="buttons">
     <form action="/wellbeing/patients/<%=patient.id()%>" method="get">
