--- a/views/patients/show.erb
+++ b/views/patients/show.erb
@@ -66,7 +66,7 @@
         <form action="/wellbeing/conditions/<%=condition.id()%>" method="get">
           <input type="submit" value="View this condition">
         </form>
-        <form action="/wellbeing/patients/<%=@patient.id()%>/edit_condition" method="get">
+        <form action="/wellbeing/conditions/<%=condition.id%>/edit" method="get">
           <input type="submit" value="Edit this condition">
         </form>
       <% } %>
