added condition new and create routes and new view

--- a/views/patients/show.erb
+++ b/views/patients/show.erb
@@ -40,7 +40,7 @@
 
 
 
-<form action="/wellbeing/patients/<%=@patient.id()%>/add" method="get">
+<form action="/wellbeing/conditions/new" method="get">
   <input type="submit" value="Add new condition">
 </form>
 
