--- a/views/patients/show.erb
+++ b/views/patients/show.erb
@@ -69,6 +69,9 @@
         <form action="/wellbeing/conditions/<%=condition.id%>/edit" method="get">
           <input type="submit" value="Edit this condition">
         </form>
+        <form action="/wellbeing/patients/<%=@patient.id%>/remove/<%=condition.id%>" method="post">
+          <input type="submit" value="Delete this condition">
+        </form>
       <% } %>
     </ul>
 <% } %>
