--- a/views/lessons/new.erb
+++ b/views/lessons/new.erb
@@ -1,12 +1,12 @@
 <form action="/gym/lessons" method="post">
   <label for="course">Course:</label>
-  <input type="text" name="course">
+  <input type="text" name="course" required>
 
   <label for="capacity">Capacity:</label>
-    <input type="number" name="capacity" min="5" max="30">
+  <input type="number" name="capacity" min="5" max="30" required>
 
   <label for="peak">Type:</label>
-  <select name="peak">
+  <select name="peak" required>
     <option value=<%=true%>><%="Peak"%></option>
     <option value=<%=false%>><%="Off-peak"%></option>
   </select>
