--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,5 @@
 <div id='home-container'>
-  <h1 id='title'>Average Joe's Gym and Wellbeing Centre Intranet</h1>
+  <h1 class="home-main-title">Average Joe's Gym and Wellbeing Centre Intranet</h1>
 </div>
 
 <div class="home-left">
