ensured all new and show views have a link to return to directory, and all edit views have links to return to directory or the object being edited

--- a/views/conditions/edit.erb
+++ b/views/conditions/edit.erb
@@ -12,3 +12,5 @@
   <input type="date" name="diagnosed" value="<%=@condition.diagnosed%>">
   <input type="submit" value="Update condition">
 </form>
+
+<p><a class="return" href="/wellbeing/patients/<%=@condition.patient_id%>">Return</a> to patient.</p>
