--- a/views/conditions/show.erb
+++ b/views/conditions/show.erb
@@ -19,5 +19,5 @@
   <input type="submit" value="Mark this as resolved">
 </form>
 
-<%if (@return_patient == "return_patient") %><p><a href="/wellbeing/patients/<%=@condition.patient_id%>">Return</a> to patient.</p> <%end%>
-<%if (@return_physio == "return_physio") %><p><a href="/wellbeing/physios/<%=@condition.physio_id%>">Return</a> to physio.</p> <%end%>
+<p><a href="/wellbeing/patients/<%=@condition.patient_id%>">Return</a> to patient.</p>
+<p><a href="/wellbeing/physios/<%=@condition.physio_id%>">Return</a> to physio.</p>
