--- a/views/home.erb
+++ b/views/home.erb
@@ -2,24 +2,26 @@
   <h1 class="home-main-title">Average Joe's Gym and Wellbeing Centre Intranet</h1>
 </div>
 
-<div class="home-left">
-  <h2 class="home-section-title">Gym</h2>
-  <p>Manage gym members and lessons. </p>
-  <form action="/gym/members" method="get">
-    <input type="submit" value="View gym members">
-  </form>
-  <form action="/gym/lessons" method="get">
-    <input type="submit" value="View gym lessons">
-  </form>
-</div>
+<div class="home-links">
+  <div class="home-left">
+    <h2 class="home-section-title">Gym</h2>
+    <p>Manage gym members and lessons. </p>
+    <form action="/gym/members" method="get">
+      <input type="submit" value="View gym members">
+    </form>
+    <form action="/gym/lessons" method="get">
+      <input type="submit" value="View gym lessons">
+    </form>
+  </div>
 
-<div class="home-right">
-  <h2 class="home-section-title">Wellbeing</h2>
-  <p>Manage physiotherapists and patients.</p>
-  <form action="/wellbeing/patients" method="get">
-    <input type="submit" value="View physiotherapy patients">
-  </form>
-  <form action="/wellbeing/physios" method="get">
-    <input type="submit" value="View physiotherapists">
-  </form>
+  <div class="home-right">
+    <h2 class="home-section-title">Wellbeing</h2>
+    <p>Manage physiotherapists and patients.</p>
+    <form action="/wellbeing/patients" method="get">
+      <input type="submit" value="View physiotherapy patients">
+    </form>
+    <form action="/wellbeing/physios" method="get">
+      <input type="submit" value="View physiotherapists">
+    </form>
+  </div>
 </div>
