--- a/views/lessons/edit.erb
+++ b/views/lessons/edit.erb
@@ -17,3 +17,6 @@
   </select>
   <input type="submit" value="Update lesson">
 </form
+
+<p><a class="return" href="/gym/lessons/<%=@lesson.id()%>">Return</a> to lesson.</p>
+<p><a class="return" href="/gym/lessons">Return</a> to directory.</p>
