--- a/views/lessons/new.erb
+++ b/views/lessons/new.erb
@@ -12,3 +12,5 @@
   </select>
   <input type="submit" value="Add lesson">
 </form>
+
+<p><a class="return" href="/gym/lessons">Return</a> to directory.</p>
