--- a/views/lessons/show.erb
+++ b/views/lessons/show.erb
@@ -47,7 +47,7 @@
   <input type="submit" value="Delete this lesson">
 </form>
 
-<p><a href="/gym/lessons">Return</a> to directory.</p>
+<p><a class="return" href="/gym/lessons">Return</a> to directory.</p>
 
 <% if @show_added == 'show_added' %>
 <h3><%=@member%> is now attending <%=@lesson.course%>.</h3>
