--- a/views/members/edit.erb
+++ b/views/members/edit.erb
@@ -9,3 +9,6 @@
   </select>
   <input type="submit" value="Update member">
 </form>
+
+<p><a class="return" href="/gym/members/<%=@member.id()%>">Return</a> to member.</p>
+<p><a class="return" href="/gym/members">Return</a> to directory.</p>
