--- a/views/members/new.erb
+++ b/views/members/new.erb
@@ -9,3 +9,5 @@
   </select>
   <input type="submit" value="Add member">
 </form>
+
+<p><a class="return" href="/gym/members">Return</a> to directory.</p>
