--- a/views/patients/new.erb
+++ b/views/patients/new.erb
@@ -19,3 +19,5 @@
   </datalist>
   <input type="submit" value="Add patient">
 </form>
+
+<p><a class="return" href="/wellbeing/patients">Return</a> to directory.</p>
