--- a/views/physios/edit.erb
+++ b/views/physios/edit.erb
@@ -6,5 +6,5 @@
 
 
 
-<p><a href="/wellbeing/physios/<%=@physio.id()%>">Return</a> to physio.</p>
-<p><a href="/wellbeing/physios">Return</a> to directory.</p>
+<p><a class="return" href="/wellbeing/physios/<%=@physio.id()%>">Return</a> to physio.</p>
+<p><a class="return" href="/wellbeing/physios">Return</a> to directory.</p>
