--- a/views/physios/show.erb
+++ b/views/physios/show.erb
@@ -31,7 +31,7 @@
   <input type="submit" value="Delete this physio">
 </form>
 
-<p><a href="/wellbeing/physios">Return</a> to directory.</p>
+<p><a class="return" href="/wellbeing/physios">Return</a> to directory.</p>
 <hr>
 
 <% unless (@physio.resolved_conditions == []) %>
