--- a/public/style.css
+++ b/public/style.css
@@ -2,23 +2,38 @@
   background-color: beige;
 }
 
+#home-container {
+  display: flex;
+  justify-content: center;
+}
+
 .home-main-title {
-  display: inline-flex;
-  align-self: center;
+  display: flex;
+  font-size: 2.5em;
+}
+
+.home-links {
+  display: flex;
+  justify-content: center;
+  width: 120%;
 }
 
 .home-left {
-  display: inline-block;
-  width: 40%;
-  /* flex-direction: column; */
-  align-self: center;
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .home-right {
-  display: inline-block;
-  width: 40%;
-  /* flex-direction: column; */
-  align-self: center;
+  display: flex;
+  width: 30%;
+  flex-direction: column;
+  align-content: center;
+}
+
+.home-section-title {
+  font-size: 2em;
 }
 
 button, input[type="button"], input[type="submit"] {
@@ -29,3 +44,11 @@ button:focus, input[type="button"]:focus, input[type="submit"]:focus {
   background-color: grey;
   outline: 0;
 }
+
+.topnav {
+  font-size: 20px;
+}
+
+a {text-decoration: none; color: black;}
+a:focus {color: darkgrey;}
+a:visited {text-decoration: none;}
