--- a/views/members/show.erb
+++ b/views/members/show.erb
@@ -46,7 +46,7 @@
   <input type="submit" value="Delete this member">
 </form>
 
-<p><a href="/gym/members">Return</a> to directory.</p>
+<p><a class="return" href="/gym/members">Return</a> to directory.</p>
 
 <% if @show_added == 'show_added' %>
 <h3><%=@member.name%> is now attending <%=@lesson%>.</h3>
