--- a/views/physios/new.erb
+++ b/views/physios/new.erb
@@ -5,3 +5,5 @@
   <input type="text" name="physio_name" required>
   <input type="submit" value="Add physio">
 </form>
+
+<p><a class="return" href="/wellbeing/physios">Return</a> to directory.</p>
